fix: overflow in delete modal
see trello card for details

fixes issue 7666

--- a/src/app/record/components/modals/modal-delete-item/modal-delete-items.component.scss
+++ b/src/app/record/components/modals/modal-delete-item/modal-delete-items.component.scss
@@ -1,3 +1,13 @@
+.title {
+  width: 48em;
+  overflow: hidden;
+  text-overflow: ellipsis
+}
+
+.title.mobile {
+  width: 14em;
+}
+
 .info {
   display: flex;
   padding: 16px;
@@ -19,6 +29,10 @@
 
   .added {
     margin-left: 16px;
+  }
+
+  .added.mobile {
+    margin-left: 0;
   }
 }
 
